# VisageFaceTracking

./: CMakeLists.txt  README.md
cmake/: FindVisage.cmake
doc/utql/Vision/: VisageFaceTracking.xml
src/: VisageFaceTracking.cpp
